--- a/app/styles/less/menu.less
+++ b/app/styles/less/menu.less
@@ -46,7 +46,7 @@ nav ul li.active{
   height: 100%;
   width: 20vw;
   display: none;
-  z-index: 100;
+  z-index: 2000;
 }
 body.menu-open .menu-close {
   display: block;
